<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_locate"
        android:orderInCategory="1"
        android:title="@string/action_locate"
        android:icon="@drawable/ic_my_location_white_36dp"
        app:showAsAction="ifRoom|withText" />
    <item
        android:orderInCategory="5"
        android:id="@+id/action_refresh"
        android:title="@string/action_refresh"
        android:icon="@drawable/ic_bubble_chart_white_36dp"
        app:showAsAction="ifRoom|withText" />
    <item
        android:orderInCategory="2"
        android:id="@+id/action_services"
        android:title="@string/action_services"
        android:icon="@drawable/ic_directions_walk_white_36dp"
        app:showAsAction="ifRoom|withText" />
</menu>
