<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.brandonzamudio.softtim.mobilityconductor.LoginActivity"
    tools:showIn="@layout/activity_login">

    <Space
        android:layout_width="20sp"
        android:layout_height="20sp"
        android:layout_centerVertical="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/space" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView2"
        android:layout_above="@+id/space"
        android:layout_centerHorizontal="true"
        android:src="@drawable/premier"
        android:contentDescription="@string/imagen" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/loginUser"
        android:layout_below="@+id/space"
        android:layout_centerHorizontal="true"
        android:hint="@string/Usuario" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/loginPass"
        android:layout_below="@+id/loginUser"
        android:layout_centerHorizontal="true"
        android:hint="@string/Contraseña" />

    <Button
        style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/iniciar_sesion"
        android:id="@+id/loginGo"
        android:layout_below="@+id/loginPass"
        android:layout_alignRight="@+id/loginPass"
        android:layout_alignEnd="@+id/loginPass"
        android:layout_alignLeft="@+id/loginPass"
        android:layout_alignStart="@+id/loginPass"
        android:layout_marginTop="20sp"
        android:background="@color/colorPrimary" />
</RelativeLayout>
